tests/suite/snapshots/suite__check__tests__check__bad_function_declarations_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_function_declarations_1.xi:2:1]
   │
 2 │ foo() {}
   · ───┬───  
   ·    ╰───── Name already bound in environment
───╯

